hacky fix to category overflow

--- a/sass/base/_layout.scss
+++ b/sass/base/_layout.scss
@@ -94,6 +94,7 @@
 .articlemeta:hover,
 .articlemeta.open, {
   width: 15.725em;
+  height: 4.5em;
   > .hide {
     display: block;
   }
